# backend-roadmap

./: README.md  main.py  pyproject.toml
01-Foundations/01-Advanced-Features/01-OOP/: OOP.md  SOLID.md
_01_foundations/_01_advanced_features/_01_oop/: README.md
_01_foundations/_01_advanced_features/_02_asyncio/: README.md
foundations/advanced_features/asyncio/: README.md
foundations/git_mastery/: README.md
foundations/linux_cli/: README.md  notes.md
notes/: 13_like.md  14_join.md  15_left_right_join.md
notes/databases/sql/: README.md  (+2 more)
notes/django/: README.md  class-based-views.md  context-managers.md  custom-management-commands.md  django-setup.md
notes/django/django-testing/testing-project/: main.py  pyproject.toml
notes/django/django-testing/testing-project/products/: apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
notes/django/django-testing/testing-project/products/migrations/: 0001_initial.py  0002_product_price_greater_than_zero_and_more.py  0003_alter_product_price_greater_than_zero_and_more.py
notes/django/django-testing/testing-project/products/templates/products/: base.html  index.html  login.html  product_list.html  profile.html
notes/django/django-testing/testing-project/products/tests/: test_forms.py  test_middleware.py  test_models.py  test_signals.py  test_views.py
notes/django/django-testing/testing-project/project/: settings.py  test_settings.py  urls.py
notes/mcp/: mcp.md
notes/prompts/: README.md  summarize-tutorial.md
notes/roadmap/: README.md
web_frameworks/networking/: README.md  notes.md
(+115 files in other folders)
