[project]
name = "backend-roadmap"
version = "0.1.0"
description = "A Python backend roadmap"
authors = [
    {name = "iBrokeTheCode",email = "alexrtc.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.16,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
