[project]
name = "testing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "requests>=2.32.3",
]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
